--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.48.2",
     "react-hot-toast": "^2.4.1",
-    "react-icons": "^4.10.1",
+    "react-icons": "^4.12.0",
+    "sharp": "^0.33.0",
     "stripe": "^14.3.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
     "uniqid": "^5.4.0",
+    "use-sound": "^4.0.1",
     "zustand": "^4.4.6"
   },
   "devDependencies": {
