--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "axios": "^1.6.1",
+    "bufferutil": "^4.0.8",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
@@ -36,6 +37,7 @@
     "typescript": "5.2.2",
     "uniqid": "^5.4.0",
     "use-sound": "^4.0.1",
+    "utf-8-validate": "^6.0.3",
     "zustand": "^4.4.6"
   },
   "devDependencies": {
